* fix SNP count for consensus
* update privacy policy
* use unlimit coverage to consensus
* align_trim on short amplicon reads length > amplicon size.  check the primer pair  name should be a set for trimming
* use align_trim bam file for downstream instead of rerun mapping again
* add varlog option for consensus workflow
* add homopolymer filter and strandBias filter for consensus workflow

## build 20211001
* cleanup intermediate files
* add privacy-policy info
* add projects report plots package and function
* add frameshift confirmation option for GISAID upload
* add cov tracker configuartion option and result page
* add GISAID/NCBI batch submit status check. append the exit screenshot to the log windown for submission 
* fix bug bioproject parsing error for SRA upload
* SRA download SRA/ENA inconsistency check with WARNING
* Update VOC/VOI/VUM
* Add vaccine received metadata field
* optimized countFastq method to avoid out of memory for large dataset

## build 20210823
* update ENA portal api URL for metadata checking
* Add Pacbio support of ec-19
* Add Pacbio Freed (Midnight) primer bed for align_trim
* add annotation on amplicon_coverage plot (amplicov 0.3.1)
* filter length=0 from SRA download reads
* input duplicate id check
* update VOC and VOI
* check platform for batch submit
* update pangolin to 3.1.11
* add guest account log option


## build 20210713
* variant call using default diploid mode, add VCF QUAL filter
* add rerun pangolin lineage assignment function in project action widget
* update VOC and VOI
* update pangolin to 3.1.5 and its dependencies
* add artic protocol primer scheme v4 for align_trim
* SNV_report and INDEL_report display in pop up table
* fix bug: align_trim deal with short amplicon and off by 1 issue
* fix bug: deletion check condition. at least covTresh on previous delete event
* fix bug: consensus off by 1 bug when deletion detected after any insertion event. 

## build 20210607
* add early stop codon aa substitution warning