@@ -129,6 +129,7 @@ r2g_consensus_homopolymer_filter=<TMPL_VAR NAME=edge-r2g-con-homopolymer-filter 
 r2g_consensus_strandbias_filter=<TMPL_VAR NAME=edge-r2g-con-strandbias-filter DEFAULT=0>
 r2g_consensus_comp_opt=<TMPL_VAR NAME=edge-r2g-con-comp-opt DEFAULT=0>
 r2g_consensus_varlog_opt=<TMPL_VAR NAME=edge-r2g-con-varlog-opt DEFAULT=0>
+r2g_consensus_pangolin_mode=<TMPL_VAR NAME=edge-r2g-con-pangolin-mode DEFAULT="usher">
 r2g_variant_call=<TMPL_VAR NAME=edge-r2g-variantcall-sw DEFAULT=1>
 r2g_variant_call_min_qual=<TMPL_VAR NAME=edge-r2g-variantcall-min-qual DEFAULT=60>
 r2g_variant_call_ploidy=<TMPL_VAR NAME=edge-r2g-variantcall-ploidy DEFAULT="diploid">
