@@ -1296,6 +1296,15 @@
 
 
 			</div>
+			<div class="ui-field-contain edge-fastq-options">
+				<fieldset data-role="controlgroup" data-mini="true" data-type="horizontal">
+					<legend>Lineage Assignment Mode<a href="#" id="edge-pangolinmode-tooltip" class="tooltip ui-btn  ui-corner-all ui-nodisc-icon ui-btn-inline ui-icon-info ui-btn-icon-notext my-tooltip-btn" title="" ></a></legend>
+					<input type="radio" data-mini="true" name="edge-r2g-con-pangolin-mode" id="edge-r2g-con-pangolin-mode-sw1" value="usher" checked="checked">
+					<label for="edge-r2g-con-pangolin-mode-sw1">Usher</label>
+					<input type="radio" data-mini="true" name="edge-r2g-con-pangolin-mode" id="edge-r2g-con-pangolin-mode-sw2" value="pangoLearn">
+					<label for="edge-r2g-con-pangolin-mode-sw2">PangoLearn</label>
+				</fieldset>
+			</div>
 			<div class="edge-right">|<a href="#" id="edge-r2g-toggle" class="edge-additional-options-toggle"> additional options </a>|</div>
 			<div id="edge-r2g-options" class="edge-additional-options">
 				<div class="edge-r2g-con-options edge-fastq-options edge-tool-parameters">
