@@ -13,6 +13,7 @@
 * use align_trim bam file for downstream instead of rerun mapping again
 * add varlog option for consensus workflow
 * add homopolymer filter and strandBias filter for consensus workflow
+* add option for panglin lineage assingment mode, usher or pangoLearn
 
 ## build 20211001
 * cleanup intermediate files
